crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_fields.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Color {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let v0 = p.parse::<CSSInt>()?;
        let v1 = p.parse::<CSSInt>()?;
        let v2 = p.parse::<CSSInt>()?;
        return Ok(Self {
            red: v0,
            green: v1,
            blue: v2,
        });
    }
}
