crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_keyword_pattern_and_range.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for KeywordWithRange {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let mut auto_value: Option<AutoValue> = None;
        let mut percentage: Option<Number> = None;
        loop {
            let c = p.peek_n(1);
            let atom = p.to_atom::<FooKeywords>(c);
            if auto_value.is_none() && atom == FooKeywords::Auto {
                auto_value = Some(p.parse::<AutoValue>()?);
                continue;
            }
            if percentage.is_none() && <Number>::peek(p, c) {
                let inner = p.parse::<Number>()?;
                if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&inner) {
                    let c: ::css_parse::Cursor = inner.into();
                    if !(0..=100).contains(&i) {
                        use ::css_parse::ToSpan;
                        Err(
                            crate::Diagnostic::new(
                                c,
                                crate::Diagnostic::number_out_of_bounds,
                            ),
                        )?
                    }
                }
                percentage = Some(inner);
                continue;
            }
            break;
        }
        if auto_value.is_none() || percentage.is_none() {
            let c = p.peek_n(1);
            Err(crate::Diagnostic::new(c, crate::Diagnostic::unexpected))?
        }
        return Ok(Self {
            auto_value: auto_value.unwrap(),
            percentage: percentage.unwrap(),
        });
    }
}
