crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_many_fields.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Transform {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let v0 = p.parse::<Angle>()?;
        let v1 = p.parse::<Angle>()?;
        let v2 = p.parse::<Angle>()?;
        let v3 = p.parse::<Length>()?;
        let v4 = p.parse::<Length>()?;
        let v5 = p.parse::<Length>()?;
        let v6 = p.parse::<Number>()?;
        let v7 = p.parse::<Number>()?;
        let v8 = p.parse::<Number>()?;
        return Ok(Self {
            rotate_x: v0,
            rotate_y: v1,
            rotate_z: v2,
            translate_x: v3,
            translate_y: v4,
            translate_z: v5,
            scale_x: v6,
            scale_y: v7,
            scale_z: v8,
        });
    }
}
