crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_multiple_generics.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a, T, U> ::css_parse::Parse<'a> for Container<T, U>
where
    T: ::css_parse::Parse<'a> + ::css_parse::Peek<'a>,
    U: ::css_parse::Parse<'a> + ::css_parse::Peek<'a>,
{
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let v0 = p.parse::<T>()?;
        let v1 = p.parse::<U>()?;
        return Ok(Self { first: v0, second: v1 });
    }
}
