crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_multiple_range_fields.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Color {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let red = p.parse::<CSSInt>()?;
        if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&red) {
            let c: ::css_parse::Cursor = red.into();
            if !(0..=255).contains(&i) {
                use ::css_parse::ToSpan;
                Err(crate::Diagnostic::new(c, crate::Diagnostic::number_out_of_bounds))?
            }
        }
        let green = p.parse::<CSSInt>()?;
        if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&green) {
            let c: ::css_parse::Cursor = green.into();
            if !(0..=255).contains(&i) {
                use ::css_parse::ToSpan;
                Err(crate::Diagnostic::new(c, crate::Diagnostic::number_out_of_bounds))?
            }
        }
        let blue = p.parse::<CSSInt>()?;
        if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&blue) {
            let c: ::css_parse::Cursor = blue.into();
            if !(0..=255).contains(&i) {
                use ::css_parse::ToSpan;
                Err(crate::Diagnostic::new(c, crate::Diagnostic::number_out_of_bounds))?
            }
        }
        let alpha = p.parse::<Number>()?;
        if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&alpha) {
            let c: ::css_parse::Cursor = alpha.into();
            if !(0..=1).contains(&i) {
                use ::css_parse::ToSpan;
                Err(crate::Diagnostic::new(c, crate::Diagnostic::number_out_of_bounds))?
            }
        }
        return Ok(Self {
            red: red,
            green: green,
            blue: blue,
            alpha: alpha,
        });
    }
}
