crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_optional_keywords.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for KeywordWithRange {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let mut v0: Option<Ident> = None;
        let mut v1: Option<Ident> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Ident>()
                && p.to_atom::<FooKeywords>(c) == FooKeywords::Auto
            {
                v0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if v1.is_none() && p.peek::<Ident>()
                && p.to_atom::<FooKeywords>(c) == FooKeywords::None
            {
                v1 = Some(p.parse::<Ident>()?);
                continue;
            }
            break;
        }
        if v0.is_none() && v1.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self {
            auto_value: v0,
            none_value: v1,
        });
    }
}
