crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_range.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Volume {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::{Parse, Build};
        let level = p.parse::<Number>()?;
        if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&level) {
            if !(0.0f32..=100.0f32).contains(&i) {
                use ::css_parse::ToSpan;
                Err(
                    ::css_parse::diagnostics::NumberOutOfBounds(
                        i,
                        format!("{}..={}", 0.0f32, 100.0f32),
                        level.to_span(),
                    ),
                )?
            }
        }
        Ok(Self { level: level })
    }
}
