crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_range_from.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for PositiveValue {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::{Parse, Peek, Build};
        let value = p.parse::<CSSInt>()?;
        if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&value) {
            if 1.0f32 > i {
                use ::css_parse::ToSpan;
                Err(crate::diagnostics::NumberTooSmall(1.0f32, value.to_span()))?
            }
        }
        Ok(Self { value: value })
    }
}
